Created README file and added exception handler + custom exceptions